# icpc-kernel-competitions

./: .gitignore  .gitmodules
ann-competition/: .gitignore  .modalignore  CMakeLists.txt  COMPLETE_WORKFLOW.md  EXAMPLES.md  FINAL_SETUP_SUMMARY.md  GETTING_STARTED.md  MODAL_GUIDE.md  MODAL_SETUP.md  MODAL_SUMMARY.md  Makefile  QUICKSTART.md  README.md  SETUP_COMPLETE.md  SETUP_VERIFICATION.md  VOLUME_IMPLEMENTATION.md  hello.py  modal_app.py  pyproject.toml  requirements.txt  setup.py
ann-competition/include/: ann_interface.hpp  dataset.hpp
ann-competition/python/: __init__.py  benchmark.py  dataset_loader.py  metrics.py
ann-competition/scripts/: benchmark.py  quick_test.py
ann-competition/src/: algorithm.cpp  bindings.cpp  naive_algorithm.cpp
